--- a/spring-boot-admin-server/pom.xml
+++ b/spring-boot-admin-server/pom.xml
@@ -41,7 +41,7 @@
         	<artifactId>spring-boot-admin-starter-server</artifactId>
         	<version>${codecentric.boot.admin.version}</version>
     	</dependency>
-<!--     	<dependency>
+<!--     	<dependency> not needed for logout button! 
     		<groupId>de.codecentric</groupId>
     		<artifactId>spring-boot-admin-server-ui</artifactId>
     		<version>${codecentric.boot.admin.version}</version>
