--- a/spring-boot-admin-server/src/main/resources/application.properties
+++ b/spring-boot-admin-server/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8989
 spring.security.user.name=hello
 spring.security.user.password=kitty
 spring.security.user.roles=ADMIN,USER
+
+# have the base URI of /actuator/health/ replaced by /health for K8s liveness checks (see SecurityConfig.java as well):
+# DON'T : we use a resource fragment in deployment.yml to specify the URI for K8s liveness checks
+#management.endpoints.web.base-path=
